manifests/netshoot.yml
apiVersion: v1
kind: Pod
metadata:
  name: netshoot
  namespace: default
spec:
  containers:
    - name: netshoot
      image: mirror.gcr.io/nicolaka/netshoot
      command: ["sleep", "3600"]
      resources:
        requests:
          cpu: 50m
          memory: 100mi
        limits:
          cpu: 100m
          memory: 150mi
  restartPolicy: Never
